src/objects/Relationship_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account_A__c</fullName>
        <formula>Relationship__r.Account_A__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_B__c</fullName>
        <formula>Relationship__r.Account_B__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Status of the Relationship Contact</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_s_Account__c</fullName>
        <formula>Relationship_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>text(Relationship_Contact__r.Department__c)</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Relationship_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>Text(Relationship_Contact__r.Job_Title__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Relationship_Contact__r.MobilePhone</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Relationship_Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Contact_Link__c</fullName>
        <formula>HYPERLINK(Id,  Relationship_Contact__r.FirstName &amp;&quot; &quot;&amp; Relationship_Contact__r.LastName,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Contact Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Active__c</field>
                <operation>equals</operation>
                <value>true</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationship Contacts</relationshipLabel>
        <relationshipName>Relationship_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Relationship Contacts</relationshipLabel>
        <relationshipName>Relationship_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Group - read/write</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Group - read only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Relationship Contact</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Relationship Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationship Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>